--- a/css/main.css
+++ b/css/main.css
@@ -5712,6 +5712,12 @@ p { font-family: "Open Sans"; color: #000000; font-size: 1.8rem; font-weight: 40
 
 .link { display: block; font-family: "Open Sans"; position: relative; -webkit-transition: 0.24s ease-in; -o-transition: 0.24s ease-in; transition: 0.24s ease-in; }
 
+.link--info { font-weight: 400; font-size: 1.6rem; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: start; -webkit-justify-content: flex-start; -ms-flex-pack: start; justify-content: flex-start; }
+
+.link--info svg { margin-right: 1.2rem; width: 1.4rem; display: block; }
+
+.link--info.ph svg { width: 1.3rem; }
+
 .link--filter { width: 1.7rem; height: 1.4rem; }
 
 .link--filter svg { width: 100%; display: block; height: 100%; }
@@ -5889,6 +5895,18 @@ p { font-family: "Open Sans"; color: #000000; font-size: 1.8rem; font-weight: 40
 .select--header.opened .jq-selectbox__trigger-arrow { -webkit-transform: translateY(-50%) rotate(180deg); -ms-transform: translateY(-50%) rotate(180deg); transform: translateY(-50%) rotate(180deg); }
 
 .select--city .jq-selectbox__dropdown { min-width: 20rem; }
+
+.select--place .jq-selectbox__dropdown { margin: 0; -webkit-box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2); box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2); -webkit-border-radius: 0px 0px 8px 8px; border-radius: 0px 0px 8px 8px; background: #fff; border: none; font: initial; }
+
+.select--place .jq-selectbox__dropdown li { padding: 1.5rem 2rem; font-size: 1.8rem; font-family: "Open Sans"; font-weight: 400; color: #5B636A; }
+
+.select--place .jq-selectbox__dropdown li.selected { color: #5B636A; background: transparent; }
+
+.select--place .jq-selectbox__dropdown li:hover { background: transparent; color: #1B65B9; }
+
+.select--place .jq-selectbox__trigger { border: none; width: 2rem; right: 0; height: 100%; }
+
+.select--place .jq-selectbox__trigger-arrow { top: 50%; right: 0; width: 2rem; height: 2rem; border: none; -webkit-transition: 0.24s ease-in; -o-transition: 0.24s ease-in; transition: 0.24s ease-in; -webkit-transform-origin: center center; -ms-transform-origin: center center; transform-origin: center center; background: url(../img/tith.svg) no-repeat center center; -webkit-background-size: 2rem 2rem; background-size: 2rem 2rem; -webkit-transform: translateY(-50%); -ms-transform: translateY(-50%); transform: translateY(-50%); }
 
 .select--time .jq-selectbox__dropdown { margin: 0; -webkit-box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2); box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2); -webkit-border-radius: 0px 0px 8px 8px; border-radius: 0px 0px 8px 8px; background: #fff; border: none; font: initial; }
 
@@ -6198,7 +6216,79 @@ p { font-family: "Open Sans"; color: #000000; font-size: 1.8rem; font-weight: 40
 
 .section-about .stat-item:nth-child(2) { margin: 0 9.5rem; }
 
+.section-doctorpage { padding-top: 6rem; padding-bottom: 3rem; }
+
+.section-doctorpage .doctorpage-info__photo { -webkit-border-radius: 8px; border-radius: 8px; overflow: hidden; max-width: 39rem; width: 100%; height: 53rem; }
+
+.section-doctorpage .doctorpage-info__photo img { width: 100%; height: 100%; -o-object-fit: cover; object-fit: cover; }
+
+.section-doctorpage .doctorpage-info__credits { margin-left: 3rem; }
+
+.section-doctorpage .doctorpage-info__form { margin-left: auto; }
+
+.section-doctorpage .doctorpage-info__form .form { padding: 3.5rem 3rem 3rem 3rem; }
+
+.section-doctorpage .doctorpage-info__form .form-block { margin-bottom: 4.5rem; }
+
+.section-doctorpage .doctorpage-info__form .form-block:last-child { margin-bottom: 3.5rem; }
+
+.section-doctorpage .doctorpage-info__form .form-rows { -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; -webkit-box-pack: start; -webkit-justify-content: flex-start; -ms-flex-pack: start; justify-content: flex-start; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; }
+
+.section-doctorpage .doctorpage-info__form .btn { margin: 0 auto; max-width: 100%; }
+
+.section-doctorpage .doctorpage-info__form .find-form { -webkit-border-radius: 8px; border-radius: 8px; max-width: 34rem; width: 100%; background: #fff; -webkit-box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2); box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2); }
+
+.section-doctorpage .doctorpage-info__form .find-form .paragraph { text-align: center; background: #1B65B9; -webkit-border-radius: 8px 8px 0 0; border-radius: 8px 8px 0 0; padding: 1.8rem 0; }
+
+.section-doctorpage .doctorpage-info__top { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-align: start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; -webkit-box-pack: start; -webkit-justify-content: flex-start; -ms-flex-pack: start; justify-content: flex-start; margin-bottom: 4.5rem; }
+
+.section-doctorpage .doctorpage-info__top .title { margin-bottom: 1.5rem; line-height: 3rem; }
+
+.section-doctorpage .doctorpage-info__spec { margin-top: 2.5rem; margin-bottom: 3rem; }
+
+.section-doctorpage .doctorpage-info__spec .paragraph { margin-bottom: 1.5rem; }
+
+.section-doctorpage .doctorpage-info__spec ul { padding: 0; margin: 0; list-style: none; }
+
+.section-doctorpage .doctorpage-info__spec ul li { font-weight: 300; font-size: 1.8rem; line-height: 2rem; margin-bottom: 1.25rem; }
+
+.section-doctorpage .doctorpage-info__spec ul li:last-child { margin-bottom: 0; }
+
+.section-doctorpage .doctorpage-info__location { margin-bottom: 3rem; }
+
+.section-doctorpage .doctorpage-info__location .paragraph { margin-bottom: 1.5rem; }
+
+.section-doctorpage .doctorpage-info__phone .paragraph { margin-bottom: 1.5rem; }
+
+.section-doctorpage .doctorpage-info__bottom .paragraph + p { margin-top: 1.5rem; line-height: 3rem; }
+
+.section-doctorpage .doctorpage-banner .banner { margin: 6rem 0; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-align: start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; -webkit-box-pack: justify; -webkit-justify-content: space-between; -ms-flex-pack: justify; justify-content: space-between; }
+
+.section-doctorpage .doctorpage-banner .banner a:only-child { max-width: 100%; width: 100%; }
+
+.section-doctorpage .doctorpage-reviews { margin-top: 3rem; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-align: stretch; -webkit-align-items: stretch; -ms-flex-align: stretch; align-items: stretch; -webkit-box-pack: start; -webkit-justify-content: flex-start; -ms-flex-pack: start; justify-content: flex-start; -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; }
+
+.section-doctorpage .doctorpage-reviews__top { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-align-content: center; -ms-flex-line-pack: center; align-content: center; padding-bottom: 2.5rem; -webkit-box-pack: justify; -webkit-justify-content: space-between; -ms-flex-pack: justify; justify-content: space-between; border-bottom: 1px solid rgba(0, 10, 64, 0.17); }
+
+.section-doctorpage .doctorpage-reviews__block { margin-bottom: 3.5rem; min-height: 27rem; padding: 2.5rem; background: #fff; width: 59rem; -webkit-box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2); box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2); }
+
+.section-doctorpage .doctorpage-reviews__block:nth-child(even) { margin-left: auto; }
+
+.section-doctorpage .doctorpage-reviews__block .paragraph--review { line-height: 2.4rem; margin: 2rem 0 0 0; }
+
+.section-doctorpage .doctorpage-reviews__block .star-row { width: 8rem; height: 1.6rem; }
+
+.section-doctorpage .doctorpage-reviews__block .star-row svg { width: 100%; height: 100%; display: block; }
+
 .section-find { padding-top: 6rem; padding-bottom: 16rem; min-height: 80vh; }
+
+.section-find.oth { padding-top: 0; }
+
+.section-find.oth .find-items { margin-top: 3rem; }
+
+.section-find.oth .find .pagination { margin-top: 6rem; }
+
+.section-find.oth .find .banner { margin-top: 10rem; margin-bottom: 0; }
 
 .section-find .find { padding-top: 0; }
 
