--- a/css/main.css
+++ b/css/main.css
@@ -5714,6 +5714,10 @@ p { font-family: "Open Sans"; color: #000000; font-size: 1.8rem; font-weight: 40
 
 .link { display: block; font-family: "Open Sans"; position: relative; -webkit-transition: 0.24s ease-in; -o-transition: 0.24s ease-in; transition: 0.24s ease-in; }
 
+.link--tologin { font-weight: 700; font-size: 1.8rem; text-align: center; color: #1B65B9; }
+
+.link--tologin:hover { color: #231F20; }
+
 .link--info { font-weight: 400; font-size: 1.6rem; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: start; -webkit-justify-content: flex-start; -ms-flex-pack: start; justify-content: flex-start; }
 
 .link--info svg { margin-right: 1.2rem; width: 1.4rem; display: block; }
@@ -5830,6 +5834,8 @@ p { font-family: "Open Sans"; color: #000000; font-size: 1.8rem; font-weight: 40
 
 .field.filled + label { font-size: 1.6rem; -webkit-transform: translateY(-120%); -ms-transform: translateY(-120%); transform: translateY(-120%); color: #8296A5; }
 
+.field--place { background: url(../img/tith.svg) no-repeat center right; -webkit-background-size: 2rem 2rem; background-size: 2rem 2rem; }
+
 .jq-selectbox { display: block; }
 
 .jq-selectbox select { display: none; }
@@ -5932,17 +5938,19 @@ p { font-family: "Open Sans"; color: #000000; font-size: 1.8rem; font-weight: 40
 
 .checkbox { position: absolute; z-index: -1; opacity: 0; margin: 0 0 0 0; }
 
-.checkbox + label { position: relative; padding: 0 0 0 2.6rem; cursor: pointer; display: block; font-family: "Open Sans"; font-weight: 400; font-size: 1.6rem; line-height: 1.8rem; color: #000000; }
+.checkbox + label { position: relative; padding: 0 0 0 2.6rem; cursor: pointer; display: block; font-family: "Open Sans"; font-weight: 400; font-size: 1.6rem; line-height: 1.8rem; color: #231F20; -webkit-transition: 0.24s ease-in; -o-transition: 0.24s ease-in; transition: 0.24s ease-in; }
 
-.checkbox + label a { text-decoration: underline; }
+.checkbox + label a { -webkit-transition: 0.24s ease-in; -o-transition: 0.24s ease-in; transition: 0.24s ease-in; color: #1B65B9; }
 
-.checkbox + label a:hover { text-decoration: none; }
+.checkbox + label a:hover { color: #231F20; }
 
 .checkbox + label:before { content: ''; position: absolute; top: 50%; margin-top: -.9rem; left: 0; width: 1.8rem; height: 1.8rem; -webkit-border-radius: 5px; border-radius: 5px; background: #fff; border: 2px solid #231F20; -webkit-transition: .2s; -o-transition: .2s; transition: .2s; }
 
-.checkbox + label:after { content: ''; position: absolute; top: 50%; margin-top: -.9rem; left: 0; -webkit-border-radius: 8px; border-radius: 8px; width: 1.8rem; height: 1.8rem; background: url(../img/check.svg) no-repeat center center, #231F20; -webkit-background-size: 8px 6px; background-size: 8px 6px; -webkit-transition: .2s; -o-transition: .2s; transition: .2s; opacity: 0; }
+.checkbox + label:after { content: ''; position: absolute; top: 50%; margin-top: -.9rem; left: 0; -webkit-border-radius: 5px; border-radius: 5px; width: 1.8rem; height: 1.8rem; background: url(../img/check.svg) no-repeat center center, #1B65B9; -webkit-background-size: 14px 10px; background-size: 14px 10px; -webkit-transition: .2s; -o-transition: .2s; transition: .2s; opacity: 0; }
 
 .checkbox.error + label:before { background: #ea2127; }
+
+.checkbox:checked + label { color: #1B65B9; }
 
 .checkbox:checked + label:after { opacity: 1; }
 
@@ -6023,6 +6031,34 @@ p { font-family: "Open Sans"; color: #000000; font-size: 1.8rem; font-weight: 40
 .section-main .main .form .btn { margin-top: 6rem; }
 
 .section-main .main .title--h2 { margin-top: 1rem; }
+
+.section-reg { padding: 10rem 0 8rem 0; }
+
+.section-reg .reg-form { padding: 3.5rem 10.5rem 5rem 10.5rem; background: #FFFFFF; -webkit-border-radius: 13px; border-radius: 13px; max-width: 101rem; width: 100%; margin: 0 auto; -webkit-box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2); box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2); }
+
+.section-reg .reg-form .p-m { margin: 3rem 0; }
+
+.section-reg .reg-form__head .paragraph { margin-top: 1.5rem; }
+
+.section-reg .reg-form form { margin-top: 6.5rem; }
+
+.section-reg .reg-form .form-row + .form-row { margin-top: 0; }
+
+.section-reg .reg-form .form-row__side .form-block { max-width: 38.5rem; width: 100%; }
+
+.section-reg .reg-form .form-col .form-check { margin: 0 0 3rem 0; }
+
+.section-reg .reg-form .form-col .form-check:last-child { margin-bottom: 0; }
+
+.section-reg .reg-form .form-check { max-width: 46rem; width: 100%; margin: 4rem auto 3rem auto; }
+
+.section-reg .reg-form .form .btn--submit { margin: 0 auto; }
+
+.section-reg .reg-form__login { max-width: 18rem; width: 100%; margin: 2.5rem auto 0 auto; }
+
+.section-reg .reg-form__login .paragraph { line-height: 150%; }
+
+.section-reg .reg-form__login .link { line-height: 150%; }
 
 .section-who { padding: 10rem 0 8rem 0; }
 
@@ -6439,6 +6475,12 @@ p { font-family: "Open Sans"; color: #000000; font-size: 1.8rem; font-weight: 40
 .section-accept .accept-content ul { margin: 2.4rem 0; }
 
 .form-row { position: relative; }
+
+.reg-form .form-block__adr { margin-top: 5rem; width: 100%; }
+
+.reg-form .form-block__adr .form-check { margin: 2rem 0 0 0; }
+
+.reg-form .form-block__adr .form-block { width: 100%; }
 
 .doctor { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-align: start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; -webkit-box-pack: justify; -webkit-justify-content: space-between; -ms-flex-pack: justify; justify-content: space-between; width: 100%; }
 
